# binaural-beats

./: CMakeLists.txt
src/: gui.c  gui.h  main.c
